test: add salty, randy creation unit test